syntax = "proto3";

package agent.v1;

service Plans {
  rpc UploadPlan(UploadPlanRequest) returns (UploadPlanResponse) {}
}

message UploadPlanRequest {
  string run_id = 1;
  string content = 2;
}

message UploadPlanResponse {
  bool success = 1;
}
